# homecare-mobile

./: .gitignore  RUN_APP.md  build.yaml  flutter_launcher_icons.yaml  pubspec.yaml
.github/workflows/: generate-podfile-lock.yml
android/: .gitignore  gradle.properties
android/app/: build.gradle  debug.keystore  google-services.json  proguard-rules.pro
assets/translations/: en.json
etc/bluetooth_device/: .gitignore  README.md  pyproject.toml
etc/bluetooth_device/src/: blood_pressure_monitor.py  glucose_monitor.py  heart_rate_monitor.py  pulse_oximeter.py
etc/tolgee/: docker-compose.yml
ios/: Podfile
ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_localzations.dart  const.dart  default_page.dart  main.dart  service_locator.dart  utils.dart
lib/core/blocs/: user_role_cubit.dart
lib/core/error/: failures.dart
lib/core/services/: ai_tools_service.dart  (+5 more)
lib/i18n/: translations.g.dart  translations_en.g.dart  translations_id.g.dart  translations_zh.g.dart
lib/l10n/: README.md  app_en.arb  app_id.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_id.dart  app_localizations_zh.dart  app_zh.arb
lib/route/: app_router.dart  app_routes.dart  auth_routes.dart  core_routes.dart  dashboard_routes.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
test/: widget_test.dart
tolgee/: .gitignore  docker-compose.yml
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+550 files in other folders)
